--- a/ISNRVhub/Main_iPhone.storyboard
+++ b/ISNRVhub/Main_iPhone.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8YX-ce-x5E">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment version="2320" identifier="iOS"/>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,16 +24,21 @@
                     </tabBar>
                     <connections>
                         <segue destination="SsR-n4-iAl" kind="relationship" relationship="viewControllers" id="5ke-O0-6tL"/>
+                        <segue destination="mba-2U-J7W" kind="relationship" relationship="viewControllers" id="CHy-iw-WzE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-428.80000000000001" y="50.374812593703155"/>
+            <point key="canvasLocation" x="-686.08000000000004" y="45.314673997334175"/>
         </scene>
         <!--AdminISNRV-->
         <scene sceneID="SCH-XJ-pT8">
             <objects>
                 <viewController id="r9y-0e-qA0" customClass="AdminISNRV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7RS-x9-rO7"/>
+                        <viewControllerLayoutGuide type="bottom" id="ir0-2J-dTb"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleAspectFit" id="GVq-x5-86G">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -57,7 +61,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="5xz-nJ-fJT"/>
                     </view>
                     <navigationItem key="navigationItem" id="QdK-Zy-Bnq">
                         <barButtonItem key="leftBarButtonItem" image="menu.png" id="w54-3S-uor">
@@ -71,17 +74,20 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EZ2-17-qyW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1705" y="-1144"/>
+            <point key="canvasLocation" x="2728" y="-1029.0854572713645"/>
         </scene>
         <!--Select a Status-->
         <scene sceneID="utv-mB-KWp">
             <objects>
                 <viewController id="z1W-7d-8qO" customClass="StatusViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NNj-2C-9mF"/>
+                        <viewControllerLayoutGuide type="bottom" id="L2w-YZ-sey"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="TcA-1L-Lz3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="GDe-0l-UgN"/>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Select a Status" id="EyM-gW-p16">
@@ -96,12 +102,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8o-mD-3I4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2570" y="-1155"/>
+            <point key="canvasLocation" x="4112" y="-1038.9805097451276"/>
         </scene>
         <!--ABOUT US-->
         <scene sceneID="sKG-aa-Awm">
             <objects>
                 <viewController id="U2a-gW-q06" customClass="AboutISNRV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gnw-io-Alh"/>
+                        <viewControllerLayoutGuide type="bottom" id="GhC-GP-Tfo"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xHL-tZ-Vcq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -113,7 +123,6 @@
                             </webView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="Udu-cI-tZ6"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="ABOUT US" image="second" id="1UH-Tf-76l"/>
                     <toolbarItems/>
@@ -130,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GrR-WA-7PO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2374.4000000000001" y="-414.69265367316348"/>
+            <point key="canvasLocation" x="3799.0400000000004" y="-373.03686987091169"/>
         </scene>
         <!--Sidebar View Controller-->
         <scene sceneID="arH-Cv-tfv">
@@ -227,17 +236,20 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CxA-Lz-Tay" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1396.8" y="-15.292353823088456"/>
+            <point key="canvasLocation" x="2234.8800000000001" y="-13.756240320619302"/>
         </scene>
         <!--Parking Status-->
         <scene sceneID="V5x-uA-m4B">
             <objects>
                 <viewController id="mba-2U-J7W" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Zmr-Wv-Sye"/>
+                        <viewControllerLayoutGuide type="bottom" id="jXV-Fh-1T2"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qAj-yf-fKS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="z9w-uX-bLU"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Parking Status" image="second" id="hXM-nT-eJw"/>
                     <connections>
@@ -247,7 +259,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uMp-0a-PEd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="443.19999999999999" y="429.08545727136436"/>
+            <point key="canvasLocation" x="709.12" y="385.98391958443574"/>
         </scene>
         <!--Item-->
         <scene sceneID="vh1-aQ-u7s">
@@ -273,12 +285,16 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="07Y-HJ-2on" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1396.8" y="655.77211394302856"/>
+            <point key="canvasLocation" x="2234.8800000000001" y="589.89995257243959"/>
         </scene>
         <!--Parking-->
         <scene sceneID="IR0-ED-nga">
             <objects>
                 <viewController id="d8A-91-RHo" customClass="ParkingStatus" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mon-OA-R01"/>
+                        <viewControllerLayoutGuide type="bottom" id="VX8-vo-i2N"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fz4-7x-I0S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -300,7 +316,6 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="P3y-Xe-vbN"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Parking" image="second" id="H65-1b-I5c"/>
                     <navigationItem key="navigationItem" id="AJm-Ar-PiJ">
@@ -315,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fdc-Q2-HWl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2374" y="316"/>
+            <point key="canvasLocation" x="3798.4000000000001" y="284.25787106446779"/>
         </scene>
         <!--DAILY PRAYERS-->
         <scene sceneID="uYE-Tq-uip">
@@ -483,8 +498,8 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0:00 PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfT-e9-QdV">
-                                                    <rect key="frame" x="123" y="13" width="70" height="35"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00 PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfT-e9-QdV">
+                                                    <rect key="frame" x="123" y="13" width="70" height="36"/>
                                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="HPX-MO-IyZ"/>
@@ -506,9 +521,9 @@
                                                 <constraint firstItem="UMm-ay-8bB" firstAttribute="top" secondItem="QJI-kz-nfS" secondAttribute="top" id="GTf-SQ-KjH"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="QJI-kz-nfS" secondAttribute="trailing" constant="56" id="LJt-fa-F4O"/>
                                                 <constraint firstItem="QJI-kz-nfS" firstAttribute="leading" secondItem="BfT-e9-QdV" secondAttribute="trailing" constant="40" id="cds-cV-m7h"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="BfT-e9-QdV" secondAttribute="bottom" constant="1" id="gOI-yy-Yom"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="BfT-e9-QdV" secondAttribute="bottom" id="gOI-yy-Yom"/>
                                                 <constraint firstItem="UMm-ay-8bB" firstAttribute="bottom" secondItem="QJI-kz-nfS" secondAttribute="bottom" id="hpU-v5-6DT"/>
-                                                <constraint firstItem="BfT-e9-QdV" firstAttribute="centerY" secondItem="C2i-ia-kYN" secondAttribute="centerY" id="jKe-tN-b64"/>
+                                                <constraint firstItem="BfT-e9-QdV" firstAttribute="centerY" secondItem="C2i-ia-kYN" secondAttribute="centerY" constant="1.25" id="jKe-tN-b64"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="UMm-ay-8bB" secondAttribute="bottom" constant="2" id="rdD-6s-Fkh"/>
                                                 <constraint firstItem="UMm-ay-8bB" firstAttribute="centerY" secondItem="C2i-ia-kYN" secondAttribute="centerY" id="svP-pk-qpM"/>
                                                 <constraint firstItem="UMm-ay-8bB" firstAttribute="leading" secondItem="C2i-ia-kYN" secondAttribute="leadingMargin" constant="2" id="yK8-ga-VId"/>
@@ -631,7 +646,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ny0-UH-MKq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="622.39999999999998" y="-590.10494752623697"/>
+            <point key="canvasLocation" x="995.84000000000003" y="-530.82903825448614"/>
         </scene>
     </scenes>
     <resources>
